CodeStyle: Fixed a bunch of inspection issues. (#3215)