@@ -134,7 +134,7 @@ public class OperaadsBidder implements Bidder<BidRequest> {
 
         if (w == null || w == 0 || h == null || h == 0) {
             if (CollectionUtils.isNotEmpty(formats)) {
-                final Format firstFormat = formats.get(0);
+                final Format firstFormat = formats.getFirst();
                 return banner.toBuilder()
                         .w(firstFormat.getW())
                         .h(firstFormat.getH())
